# Robomaster-2018

RM-20180508-normal_1/: ArmorDetector.cpp  CMakeLists.txt  ImageConsProd.cpp  ImageConsProd.cpp~  RM.cbp  RM.depend  RM.layout  ReadMe.txt  RemoteController.cpp  RuneDetector.cpp  RuneDetector.hpp  RuneResFilter.cpp  lenet_iter_10000.caffemodel  main.cpp  param_config.xml  param_config.xml~  rune.cpp  rune.hpp
